--- a/static/style.css
+++ b/static/style.css
@@ -1305,6 +1305,25 @@
     flex-direction: column;
     gap: var(--spacing-xl);
 }
+
+.gear-container {
+    margin: 0 auto;
+    padding: 0 var(--spacing-xl);
+    max-width: 75%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-xl);
+    h1 {
+        text-align: center;
+    }
+}
+
+.gear-features {
+    display: flex;
+    flex-direction: row;
+    gap: var(--spacing-xl);
+    width: 100%;
+}
  
 .about-card {
   border: 1px solid var(--color-border);
